--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev --respawn src/index.ts",
+    "dev": "nodemon src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "node src/index.ts",
     "knex": "ts-node ./node_modules/knex/bin/cli.js"
   },
   "keywords": [],
@@ -15,12 +15,14 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^24.7.0",
+    "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
   },
   "dependencies": {
     "dotenv": "^17.2.3",
+    "express": "^5.1.0",
     "knex": "^3.1.0",
     "pg": "^8.16.3"
   }
