--- a/package.json
+++ b/package.json
@@ -15,16 +15,17 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^24.7.0",
+    "@vitest/coverage-v8": "3.2.4",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.9.3",
-    "@vitest/coverage-v8": "3.2.4",
     "tsconfig-paths": "4.2.0",
+    "typescript": "^5.9.3",
     "vite-tsconfig-paths": "5.1.4",
     "vitest": "^3.2.4"
   },
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "^3.4.2",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "knex": "^3.1.0",
